testsuite/poke.pkl/sl-diag-3.pk
/* { dg-do compile } */

var i = (1 as int<35>) <<. 35; /* { dg-error "too big" } */
